# street_level_drainage_manchester

./: .gitignore  README.md  README_original_repo.md  TODO.md  pyproject.toml
scripts/: make_manchester_map.py  run_match_manchester.py
tests/: test_convert.py
usrn_soil_matcher/: __init__.py  bboxes.py  constants.py  convert.py  join.py  logger.py  matcher.py
